# snipe-engine

./: README.md  docker-compose.yml
backend/: .gitignore  Makefile  README.md  config.ini  install.sh  pyproject.toml
backend/crawler/: Makefile  README.md  config.ini  helper_functions.py  report_tasks.py  scraper.py
backend/crawler/crawler/: frontier.py  worker.py
backend/crawler/detection/: looptrap.py  redirect.py  robotstop.py  simidup.py
backend/crawler/utils/: __init__.py  trap_cache.py
backend/snipe/: __init__.py  __main__.py  cli.py
backend/snipe/compressor/: __init__.py  dict_encoder.py  vbyte_encoder.py
backend/snipe/indexer/: __main__.py  kgram_indexer.py  ngram_check.py  posting.py  preidx.py  preidx_batch.py  text_acq.py  text_tranf.py
backend/snipe/schemas/: index.py  preindex.py
backend/snipe/searcher/: __init__.py
backend/snipe/server/: run.py
backend/snipe/utils/: config.py  decorators.py
backend/tests/compressor/: test_compressionA.py  test_compressionSize.py
backend/tests/indexer/: test_index_avro.py
frontend/: .dockerignore  .eslintrc.json  .prettier.json  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
