[tool.poetry]
name = "snipe"
version = "0.1.0"
description = ""
authors = ["ngomtuci <ngomt4@uci.edu>"]
readme = "README.md"
packages = [{include = "snipe", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
num2words = "^0.5.13"
lxml = "^4.9.4"
spacy = "^3.7.2"
wordsegment = "^1.3.1"
bintrees = "^2.2.0"
fastavro = "^1.9.2"
python-snappy = "^0.6.1"
memory-profiler = "^0.61.0"
pyfarmhash = "^0.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
